administrator/templates/atum/scss/blocks/_sidebar.scss
// Sidebar

.wrapper {
  transition: all .3s ease;

  @include media-breakpoint-down(sm) {
    padding-left: 0;
  }

  &.closed {
    a.btn-dashboard {
      display: none;
    }

    .main-nav {
      max-width: 3rem;
    }

    .menu-dashboard {
      display: none;
    }
  }
}

.sidebar-wrapper {
  position: relative;
  top: 0;
  z-index: $zindex-sidebar;
  background-color: var(--atum-sidebar-bg);
  box-shadow: $atum-box-shadow;

  @include media-breakpoint-up(sm) {
    display: flex;
    flex: 1 0 $sidebar-width;
    flex-direction: column;
    max-width: $sidebar-width;
    transition: all .3s ease;
  }

  @include media-breakpoint-down(xs) {
    &.sidebar-menu {
      top: auto;
      bottom: 0;
    }

    &:not(.sidebar-menu) {
      display: flex;
      flex: 1 0 $sidebar-width;
      flex-direction: column;
      max-width: $sidebar-width;
      transition: all .3s ease;
    }
  }

  .main-brand {
    padding: 15px;
    margin-top: auto;
  }

  .view-login & {
    flex: 1 0 33%;
    max-width: $sidebar-width-login;

    &.transit-narrow {
      flex: 1 0 $sidebar-width;
      transition: flex 3s;
    }

    &.transit-narrow-closed {
      flex: 1 0 $sidebar-width-closed;
      transition: flex 3s;
    }
  }

  &.transit-wider {
    flex: 1 0 33%;
    max-width: $sidebar-width-login;
    transition: all 3s;
  }

  .sidebar-toggle {
    position: relative;
    background: var(--atum-link-color);
    a {
      position: relative;
      display: block;
      height: 3.2rem;
      padding: 0 .35rem;
      overflow: hidden;
      line-height: 3.2rem;
      color: var(--atum-text-light);

      &:hover {
        text-decoration: none;
      }
    }
  }
}

.menu-toggle-icon {
  width: $header-height;
  font-size: 1.7rem;
}

// Sidebar navigation
.main-nav {
  width: $sidebar-width;
  opacity: 1;

  @include media-breakpoint-down(xs) {
    width: 100%;
  }

  .open {
    box-shadow: inset 0 0  100px var(--atum-bg-light);
  }

  // All list items
  li {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    list-style-type: none;

    > a {
      flex-grow: 2;
      border-bottom: solid 1px transparent;

      &:hover {
        border-bottom: solid 1px var(--atum-bg-light);
      }
    }

    .menu-dashboard,
    .menu-quicktask {
      position: relative;
      display: inline-block;

      > a {
        display: inline-block;
        height: 100%;
        padding: 0;

        > .fas {
          display: flex;
          align-items: center;
          padding: 1rem;
          margin: 0;
        }

        &:hover,
        &.mm-active {

          // invert colors
          color: var(--atum-sidebar-link-color);
          background-color: var(--atum-sidebar-bg);
          .fas {
            color: var(--atum-contrast);
          }
        }
      }

      &::before {
        width: 0;
        background-image: none;
      }
    }

    li {

      .menu-dashboard,
      .menu-quicktask {
        > a {
          &.mm-active {

            &::before {
              display: none;
            }
          }
        }
      }
    }
  }

  span.fas {
    padding: 1rem 0;
  }

  .sidebar-item-title {
    display: inline-block;
    padding: .6rem 0;
    word-break: break-word;
  }

  // All links
  a {
    position: relative;
    display: flex;
    color: var(--atum-sidebar-link-color);

    &:hover {
      color: var(--atum-text-light);
      text-decoration: none;
    }
  }

  // 1st level items
  > li {

    > a {
      padding: 0 .35rem;

      &:hover {
        color: var(--atum-text-light);
        text-decoration: none;
        background-color: var(--atum-sidebar-link-color);
      }

      &.mm-active {

        color: var(--atum-link-color);
        &:hover {
          color: var(--atum-text-light);
        }
      }
    }
    &.mm-active {
      > a {
        color: var(--atum-link-color);
        &:hover {
          color: var(--atum-text-light);
        }

      }
    }

  }

  // 2nd level items
  ul {
    width: 100%;
    padding: 0;

    li {
      position: relative;
      display: flex;
      border: 0;

      &.mm-active {

        > a {
          color: var(--atum-link-color);
        }
      }

      > a {
        padding: 0 1rem 0 2.4rem;

        [dir=rtl] & {
          padding: 0 2.4rem 0 1rem;
        }
      }
    }

    a {
      font-size: .9rem;

      &[href]:hover:not(.menu-dashboard):not(.menu-quicktask) {
        color: $white;
        background-color: var(--atum-link-color);
      }

      &.mm-active {
        color: $white;
        background-color: var(--atum-sidebar-link-color);


        &::before {
          position: absolute;
          top: .15rem;
          bottom: .15rem;
          width: .25rem;
          content: "";
          background-color: var(--atum-contrast);

          [dir=ltr] & {
            left: 0;
          }

          [dir=rtl] & {
            right: 0;
          }
        }
      }
    }

    // 3rd level items
    ul {
      li { border-bottom: 1px solid var(--atum-bg-light);
}

      a {


        [dir=ltr] & {
          padding-left: 3rem;
        }

        [dir=rtl] & {
          padding-right: 3rem;
        }


      }

      a::before {
        [dir=ltr] & {
          left: 1.25rem;
        }

        [dir=rtl] & {
          right: 1.25rem;
        }
      }

      //4th level
      ul {
        background-color: var(--atum-bg-dark-90);
      }
    }

  }

  .divider,
  .menuitem-group {
    list-style: none;

    a::before {
      display: none;
    }
  }

  .divider {
    height: 1px;
    margin: 4px 18px;
    background-color: $bluegray;
    opacity: .7;
  }

  .menuitem-group {
    margin-top: .65rem;
    font-size: .75rem;

    [dir=ltr] & {
      padding-left: 2.4rem;
    }

    [dir=rtl] & {
      padding-right: 2.4rem;
    }
  }

  .home-image {
    padding: .7rem .4rem;
  }

  .mm-collapse {
    display: none;

    &.mm-collapsed,
    &.mm-show {
      display: block;
    }
  }

  .mm-collapsing {
    position: relative;
    height: 0;
    overflow: hidden;
    transition-timing-function: ease;
    transition-duration: .35s;
    transition-property: height, visibility;
  }

  // Dropdown indicator
  .has-arrow {
    .sidebar-item-title {
      [dir=ltr] & {
        margin-right: auto;
      }

      [dir=rtl] & {
        margin-left: auto;
      }
    }

    &:hover::after {
      color: $white;
    }

    &::after {
      display: flex;
      align-items: center;
      justify-content: center;
      width: 1.5rem;
      font-family: "Font Awesome 5 Free";
      font-weight: 900;
      color: var(--atum-sidebar-font-color);

      [dir=ltr] & {
        content: "\f054";
      }

      [dir=rtl] & {
        content: "\f053";
      }
    }
  }

  .mm-active {
    > .has-arrow::after {
      [dir=ltr] & {
        transform: rotate(90deg);
      }

      [dir=rtl] & {
        transform: rotate(-90deg);
      }
    }
  }

  // Parent icons
  .fas {
    position: relative;
    display: inline-block;
    margin: 0 .6rem;
    font-size: .9rem;
    text-align: center;
    vertical-align: top;

  }

  .badge {
    align-self: center;
    margin: 0 4px;
  }
}

.sidebar-toggle .fas {
  position: relative;
  top: -1px;
  display: inline-block;
  margin: 0 .3rem;
  font-size: 1.1rem;
  text-align: center;
  vertical-align: middle;
}

// Sidebar Closed
.closed {

  .main-nav span.fas {
    transform: scale(1.3);

  }

  .sidebar-wrapper {
    flex: 1 0 $sidebar-width-closed;
    max-width: $sidebar-width-closed;


    &.transit-wider-closed {
      flex: 1 0 33%;
      max-width: $sidebar-width-login;
      transition: flex 3s;
    }
  }

  .sidebar-item-title,
  .has-arrow::after {
    display: none;
  }

  .main-nav a:hover .sidebar-item-title {
    display: inline-block;
    min-width: $sidebar-width;
    background-color: var(--atum-sidebar-link-color);
  }


  .main-nav {

    > li > ul {
      height: 0;
      padding: 0;
      visibility: hidden;
    }
  }
}

@include media-breakpoint-up(sm) {
  button.toggler-burger {
    display: none;
  }
}

// Mobile
@include media-breakpoint-down(xs) {
  #menu-collapse {
    display: none;
    background: var(--atum-bg-dark-50);
  }

  .toggler-burger {
    position: fixed;
    bottom: 20px;
    z-index: $zindex-mobile-toggle;
    display: block;
    width: 70px;
    height: 70px;
    background: var(--atum-link-color);
    border: 8px solid var(--atum-bg-light);
    border-radius: 40px;

    [dir=ltr] & {
      right: 10px;
    }

    [dir=rtl] & {
      left: 10px;
    }

    .navbar-toggler-icon {
      color: var(--toggle-color);

      &::before {
        font: normal normal normal 30px/1 'Font Awesome 5 Free';
        color: var(--toggle-color);
        content: "\f00d";
      }
    }

    &.collapsed {
      .navbar-toggler-icon::before {
        content: "\f0c9";
      }
    }
  }

  .sidebar-menu {
    &.show {
      /* overflow-y: hidden;*/
      position: fixed;
      bottom: 55px;
      z-index: $zindex-mobile-menu;
      display: flex;
      flex-direction: column;
      width: 100%;
      max-height: 100vh;
      transition-timing-function: cubic-bezier(0, 1, .5, 1);
      transition-duration: 1s;
      transition-property: all;

      #sidebarmenu {
        overflow-y: scroll;

      }
    }

    &:not(.show) {
      max-height: 0;
    }
  }

  #sidebar-wrapper {
    &:not(.show) {
      &:not(.mm-collapse) {
        display: none;
      }
    }
  }
}

#menu-collapse-icon {
  padding: .3rem;
  margin-right: .6rem;
  font-size: .9rem;
}

